--- a/client-app/package.json
+++ b/client-app/package.json
@@ -13,13 +13,18 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/uuid": "^8.3.0",
     "axios": "^0.20.0",
+    "date-fns": "^2.0.0-alpha.13",
+    "final-form": "^4.20.1",
     "mobx": "^6.0.0",
     "mobx-react-lite": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-final-form": "^6.5.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-toastify": "^6.0.9",
+    "react-widgets": "^4.4.11",
+    "react-widgets-date-fns": "^4.0.26",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.3.0",
     "typescript": "^3.7.5",
