--- a/client-app/package.json
+++ b/client-app/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
+    "@types/revalidate": "^1.1.2",
     "@types/uuid": "^8.3.0",
     "axios": "^0.20.0",
     "date-fns": "^2.0.0-alpha.13",
@@ -25,6 +26,7 @@
     "react-toastify": "^6.0.9",
     "react-widgets": "^4.4.11",
     "react-widgets-date-fns": "^4.0.26",
+    "revalidate": "^1.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.3.0",
     "typescript": "^3.7.5",
