--- a/client-app/package.json
+++ b/client-app/package.json
@@ -19,7 +19,9 @@
     "mobx": "^6.0.0",
     "mobx-react-lite": "^3.0.0",
     "react": "^16.13.1",
+    "react-cropper": "^2.1.4",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.2.4",
     "react-final-form": "^6.5.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
