--- a/client-app/package.json
+++ b/client-app/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.12.62",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-router-dom": "^5.1.6",
     "@types/revalidate": "^1.1.2",
     "@types/uuid": "^8.3.0",
@@ -24,6 +25,7 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.4",
     "react-final-form": "^6.5.2",
+    "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-toastify": "^6.0.9",
