--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionStrings":{
+  "ConnectionStrings": {
     "DefaultConnection": "Data source=reactivities.db"
   },
   "Logging": {
@@ -8,5 +8,6 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
