--- a/client-app/package.json
+++ b/client-app/package.json
@@ -21,6 +21,7 @@
     "final-form": "^4.20.1",
     "mobx": "^6.0.0",
     "mobx-react-lite": "^3.0.0",
+    "query-string": "^6.13.7",
     "react": "^16.13.1",
     "react-cropper": "^2.1.4",
     "react-dom": "^16.13.1",
